# ESP32-ExtendedWebCamServer

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  avi_test.cpp  create_website_helper.cpp  index_ov2640.html  index_ov3660.html
CameraWebServer/: CMakeLists.txt  Makefile  build.sh  custom_partitions.csv  interactiveBuild.sh  old_platformio.ini  sdkconfig  sdkconfig.old  version.txt
CameraWebServer/main/: CMakeLists.txt  CameraWebServer.cpp  Kconfig.projbuild  WString.cpp  avi_helper.hpp  camera_helper.c  camera_pins.h  camera_website_index.h  component.mk  config.h  config_reader.cpp  config_reader.hpp  fs_browser.c  fs_browser.hpp  fs_helper.h  http_server.cpp  lapse_handler.cpp  lapse_handler.hpp  makros.h  mdns_helper.c  ota_handler.c  ota_handler.hpp  web_utils.c  web_utils.hpp  wifi_helper.c
CameraWebServer/main/include/: WString.hpp  avi_helper.hpp  camera_helper.h  config.h  config_reader.hpp  flashlight.h  fs_browser.h  lapse_handler.hpp  makros.h  mdns_helper.h  ota_handler.h  web_utils.h  wifi_helper.h
CameraWebServer/www/: compress_pages.sh  index_ov2640.html  index_ov3660.html  index_ov5640.html  monitor.html
